--- a/kclip-windows/kclip.vcxproj
+++ b/kclip-windows/kclip.vcxproj
@@ -56,7 +56,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);IMGUI_DEFINE_MATH_OPERATORS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalIncludeDirectories>$(ProjectDir)\..;$(ProjectDir)\..\thirdparty\imgui;$(ProjectDir)\..\thirdparty\imgui\backends</AdditionalIncludeDirectories>
@@ -73,7 +73,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);IMGUI_DEFINE_MATH_OPERATORS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalIncludeDirectories>$(ProjectDir)\..;$(ProjectDir)\..\thirdparty\imgui;$(ProjectDir)\..\thirdparty\imgui\backends</AdditionalIncludeDirectories>
@@ -86,6 +86,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\kbase.cc" />
+    <ClCompile Include="..\kclip.cc" />
+    <ClCompile Include="..\kwidgets.cc" />
     <ClCompile Include="..\thirdparty\imgui\backends\imgui_impl_dx11.cpp" />
     <ClCompile Include="..\thirdparty\imgui\backends\imgui_impl_win32.cpp" />
     <ClCompile Include="..\thirdparty\imgui\imgui.cpp" />
